--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -14,3 +14,16 @@
 	background-size: cover;
   	background-position: 50% 50%;
 }
+
+.slider-wrapper{
+    width: 20em;
+    height: 10em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slide{
+    width: 100%;
+    height: 100%;
+}
