--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 92vh;
+    min-height: 92vh;
 }
 
 .work-img{
@@ -13,6 +13,18 @@
 	height: 40%;
 	background-size: cover;
   	background-position: 50% 50%;
+}
+
+.slider{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 70vw;
+    margin: 0 auto;
+    height: 51vh;
+    text-align: center;
+    justify-content: center;
+    margin-top: 27vh;
 }
 
 .slider-wrapper{
@@ -24,6 +36,21 @@
 }
 
 .slide{
-    width: 100%;
-    height: 100%;
+    width: 54vw;
+    height: 50vh;
+}
+
+.work-data{
+    width: 70vw;
+}
+
+.edit-btn{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-bottom: 2em;
+}
+
+.hidden {
+    display: none;
 }
