--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    
 }
 
 .company-about{
@@ -28,6 +29,10 @@
 
 .about-info{
     width: 77vh;
+}
+
+.person{
+    padding: .5em;
 }
 
 .personal-info{
