--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -1,9 +1,13 @@
 .landingpage{
     background: cornflowerblue;
     height: 100vh;
-    width: 100vw;
+    width: 97vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.lp-edit{
+    width: 50vw;
 }
