--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,23 +1,38 @@
 .contact-us{
-    background: #6ECDDD;
+    font-family: monospace;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 92vh;
+    min-height: 92vh;
     
+}
+
+.contact-us h1{
+    font-family: monospace;
 }
 
 .contact-form{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    border: 1px solid black;
-    padding: .5em;
+    justify-content: space-evenly;
+    align-content: center;
+    height: 14em;
+    font-family: monospace;
 }
 
-.contact-form label{
-    margin-top: .3em;
-    margin-bottom: .1em;
+.contact-form input, .contact-form textarea{
+    font-size: 1em;
+    font-family: monospace;
+}
+
+.contact-form button{
+    width: 25%;
+    margin: 0 auto;
+}
+
+.split-input-container input{
+    width: 12em;
+    margin: .2em;
 }
