--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -30,7 +30,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    width: 50vh;
+    width: 50vw;
 }
 
 .links a{
@@ -40,7 +40,7 @@
 .list-links{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    
     justify-content: center;
 }
 
@@ -52,6 +52,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+.new-letter-form{
+    min-width: 12em;
 }
 
 .red{
