--- a/src/components/ShoppingPage/ShoppingPage.css
+++ b/src/components/ShoppingPage/ShoppingPage.css
@@ -1,5 +1,5 @@
 .shopping-page{
-    background: #6ECDDD;
+    
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -8,19 +8,46 @@
     min-height: 90vh;
 }
 
-.shopping-container{
-   
+.dept{
     display: flex;
-    
-    -webkit-flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 96vw;
+    margin-bottom: 2em;
+}
+
+.orange-div{
+    background: #F05A38;
+    width: 45vw;
+    position: relative;
+    color: white;
+    height: 42vh;
+    top: -14em;
+}
+
+.fake-stuff{
+    width: 96vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fake-item-container{
+display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    width: 60vw;
+}
+
+.shopping-container{
+   
 }
 
 .shopping-item{
     border: 1px solid black;
     margin: .1em;
-    width: 20vh;
+    width: 19vw;
     background: white;
     cursor: pointer;
     display: flex;
