--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -6,33 +6,64 @@
     justify-content: center;
     align-items: center;
     min-height: 92vh;
-    
+    background-color: #E84A35;
 }
 
-.contact-us h1{
-    font-family: monospace;
-}
 
 .contact-form{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-content: center;
-    height: 14em;
-    font-family: monospace;
+    height: 23em;
+    align-items: center;
+    margin-bottom: 2em;
 }
 
-.contact-form input, .contact-form textarea{
+.regular-input{
     font-size: 1em;
-    font-family: monospace;
+    height: 2.3em;
+    width: 98vw;
+}
+
+.split{
+    font-size: 1em;
+    height: 2.3em;
+    width: 98vw;
+}
+
+.contact-form textarea{
+    height: 3em;
 }
 
 .contact-form button{
-    width: 25%;
+    width: 32vw;
+    height: 6vh;
     margin: 0 auto;
+    background: black;
+    color: white;
+    border-radius: 7px;
+    border: none;
 }
 
 .split-input-container input{
     width: 12em;
     margin: .2em;
+}
+
+@media screen and (min-width: 1024px){
+    .contact-form{
+        height: 57vh;
+        justify-content: space-evenly;
+    }
+
+    .split-input-container input{
+        width: 8.3em;
+        margin: .2em;
+    }
+
+    .regular-input{
+        width: 40vw;
+        height: 2em;
+    }
 }
