--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,8 @@
     padding: .2em;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-around;
+    align-items: center;
     height: 7em;
     color: white;
     background: #000000;
@@ -12,29 +13,39 @@
 
 .business{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    width: 25vh;
+    width: 37vw;
     justify-content: space-between;
     padding-top: .2em;
     height: 100%;
 }
+/* 
 
+for the media buttons
+*/
 .media{
-    width: 100%;
+    height: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
-
+    color: #E34834;
 }
 
-.cloud-icon{
-    margin-top: .4em;
+
+/* displays the name, logo and rights */
+.rights-container{
+    display: none;
 }
 
-.business h4{
-    margin-top: 0;
+.rights-container h4{
+    color: #E34834;
 }
+
+.rights{
+    display: none;
+}
+
 
 .link-container{
     display: flex;
@@ -73,8 +84,11 @@
 }
 
 .red-btn{
-    background: red;
+    background: #E34834;
     color: white;
+    border: none;
+    height: 2.3em;
+    font-weight: 900;
 }
 
 .rights{
@@ -86,11 +100,19 @@
         display: none;
     }
 
+    .rights-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        
+    }
+
     .rights{
         display: flex;
         flex-direction: column;
-        width: 27vw;
-        justify-content: space-between;
+        justify-content: space-around;
+        height: 100%;
     }
 
     #mysterion-name{
