--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -67,7 +67,19 @@ all entries
     margin-bottom: 2em;
 }
 
+.company-motto-container{
+    padding-top: 1em;
+    background: #E84A35;
+    width: 100%;
+    min-height: 11em;
+    display: flex;
+    justify-content: center;
+    color: white;
+}
 
+.company-motto{
+    width: 60vw;
+}
 
 
 
