--- a/src/components/ShoppingPage/ShoppingPage.css
+++ b/src/components/ShoppingPage/ShoppingPage.css
@@ -24,6 +24,10 @@
     color: white;
     height: 42vh;
     top: -14em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .fake-stuff{
