--- a/src/components/Work/Work.css
+++ b/src/components/Work/Work.css
@@ -37,14 +37,16 @@
 
 .work-data{
     width: 100%;
+    padding-top: 2em;
     border-top: 3px solid rgb(0, 0, 0, 0.4);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .work-entry{
-    width: 33%;
+    width: 24%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -76,4 +78,17 @@
 
 .hidden {
     display: none;
+}
+
+
+@media screen and (min-width: 1024px){
+    .work-data{
+        width: 100%;
+        padding-top: 2em;
+        border-top: 3px solid rgb(0, 0, 0, 0.4);
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: baseline;
+    }
 }
