--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,8 @@
 .footer{
-    width: 100%;
+    position: relative;
+    overflow: hidden;
+    width: 98.5vw;
+    bottom: 0;
     margin-top: 0;
     padding: .2em;
     display: flex;
